Merch and other misc improvements

--- a/header.html
+++ b/header.html
@@ -2,7 +2,10 @@
 <div class="header__text">
   <ul class="social-links">
     <li class="social-links__item">
-      <a href="" class="social-links__link">
+      <a
+        href="https://music.apple.com/us/artist/sik-sik-sicks/1417770345"
+        class="social-links__link"
+      >
         <img
           src="./assets/apple-music.png"
           alt="Apple Music"
@@ -12,7 +15,10 @@
     </li>
 
     <li class="social-links__item">
-      <a href="" class="social-links__link">
+      <a
+        href="https://open.spotify.com/artist/4KIpM2REcw7BbQ7XRMxrKD?si=ujjoQeKwRgaI8zlmMc_2qQ"
+        class="social-links__link"
+      >
         <img
           src="./assets/spotify.png"
           alt="Spotify"
@@ -35,7 +41,10 @@
     </li>
 
     <li class="social-links__item">
-      <a href="" class="social-links__link">
+      <a
+        href="https://www.youtube.com/@siksiksicks4386"
+        class="social-links__link"
+      >
         <img
           src="./assets/youtube.png"
           alt="YouTube"
@@ -60,6 +69,6 @@
   </li>
 
   <li class="pages__item">
-    <a href="" class="pages__link" id="nav-merch">Merch</a>
+    <a href="merch.html" class="pages__link" id="nav-merch">Merch</a>
   </li>
 </ul>
